[gd_scene load_steps=12 format=2]

[ext_resource path="res://bonus01/audio/01_Fall_v4.wav" type="AudioStream" id=1]
[ext_resource path="res://bonus01/audio/01_Gunshot_v4.wav" type="AudioStream" id=2]
[ext_resource path="res://bonus03/skala/scale.tscn" type="PackedScene" id=3]
[ext_resource path="res://bonus03/enemy_group.tscn" type="PackedScene" id=4]
[ext_resource path="res://bonus01/wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://bonus03/audio/The-Kiddie-Katz-â€”-My-Little-Pony-Theme-_www.lightaudio.ru_.wav" type="AudioStream" id=6]
[ext_resource path="res://bonus03/player/rocket.tscn" type="PackedScene" id=7]
[ext_resource path="res://bonus03/bonus03.gd" type="Script" id=8]
[ext_resource path="res://bg/mimibg.tscn" type="PackedScene" id=9]
[ext_resource path="res://home.png" type="Texture" id=10]
[ext_resource path="res://touch_left_right.tscn" type="PackedScene" id=11]

[node name="bonus03" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 9 )]

[node name="enemy_group" parent="." instance=ExtResource( 4 )]

[node name="rocket" parent="." instance=ExtResource( 7 )]
position = Vector2( 627, 645 )

[node name="wall" parent="." instance=ExtResource( 5 )]

[node name="wall2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1280, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer_fire_player" type="Timer" parent="."]
wait_time = 1.005
one_shot = true
autostart = true

[node name="Timer_fire_alien" type="Timer" parent="."]
wait_time = 0.891
one_shot = true
autostart = true

[node name="scale" parent="." instance=ExtResource( 3 )]
position = Vector2( 89, 44 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 629, 320 )
stream = ExtResource( 2 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 624, 330 )
stream = ExtResource( 1 )

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 629, 330 )
stream = ExtResource( 6 )
autoplay = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 23.0
margin_top = 66.0
margin_right = 71.0
margin_bottom = 114.0
rect_scale = Vector2( 1.28, 1.28 )
texture_normal = ExtResource( 10 )

[node name="touch_left_right" parent="." instance=ExtResource( 11 )]

[connection signal="timeout" from="Timer_fire_player" to="." method="_on_Timer_fire_player_timeout"]
[connection signal="timeout" from="Timer_fire_alien" to="." method="_on_Timer_fire_alien_timeout"]
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
